tests/ui/traits/object/supertrait-assoc-type-bounds.next.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied in `dyn Sub<Assoc = String>`
  --> $DIR/supertrait-assoc-type-bounds.rs:21:39
   |
LL |     let _y: String = unchecked_copy::<dyn Sub<Assoc = String>>(&x);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^ within `dyn Sub<Assoc = String>`, the trait `Copy` is not implemented for `String`
   |
   = note: required because it appears within the type `dyn Sub<Assoc = String>`
note: required by a bound in `unchecked_copy`
  --> $DIR/supertrait-assoc-type-bounds.rs:15:22
   |
LL | fn unchecked_copy<T: Sub<Assoc = String> + ?Sized>(x: &String) -> String {
   |                      ^^^^^^^^^^^^^^^^^^^ required by this bound in `unchecked_copy`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
